fix issue with barcode font, phone gap update

--- a/KeithLink/KeithLink.Web.Presentation/phonegap-app/BEKPhoneGap/www/scss/components/_modal.scss
+++ b/KeithLink/KeithLink.Web.Presentation/phonegap-app/BEKPhoneGap/www/scss/components/_modal.scss
@@ -27,3 +27,9 @@
 .color-background-modal .modal-content {
   background-color: $background;
 }
+
+@media print {
+  .modal {
+    display: none !important;
+  }
+}
